# FixMinBesked

./: .env  .env.example  .gitignore  analytics.json  app.py  requirements.txt
experiments/: pyproject.toml  style_demo.py  test_script.py
experiments/results/: casual_to_corporate.txt  casual_to_medical.txt  corporate_to_casual.txt  corporate_to_fairytale.txt  dim_to_casual.txt  dim_to_corporate.txt  fairytale_to_casual.txt  fairytale_to_corporate.txt  medical_to_casual.txt  medical_to_corporate.txt
experiments/samples/: casual.txt  corporate.txt  dim.txt  fairytale.txt  medical.txt
experiments/src/experiments/: __init__.py  correction.py  grammar_ast.py  helpers.py  models.py  reorder.py  synonyms.py
services/: ai_client.py
static/: script.js  style.css
templates/: dashboard.html  index.html
utils/: prompts.py
