[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bigbox", email = "unic0rn9k@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.23.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "spacy>=3.8.14",
    "torch>=2.5.1",
    "transformers>=4.46.0,<5",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
